bdr.BDR2.scala.error
Compilation error:
BDR2:2: error: not found: value R
  case R => rigth() ; forward()
       ^BDR2:2: error: not found: value rigth
  case R => rigth() ; forward()
            ^